--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -81,7 +81,7 @@
   .insights-content {
     display: none;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100vw;
     grid-gap: var(--gutter) 0;
