--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -265,13 +265,13 @@ tr {
 }
 
 .share-box {
+	display: none;
 	height: 89px;
 	width: 129px;
 	background-color: white;
 	color: black;
 	padding: 10px;
-	display: block;
-	right: 0px;
+	right: -28px;
 	position: relative;
 	float: right;
 	top: 262px;
@@ -289,6 +289,7 @@ tr {
 		li {
 			font-size: 12px;
 			line-height: 18px;
+			cursor: pointer;
 		}
 	}
 
