--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -109,7 +109,7 @@ tr:nth-child(even) {
 	position: absolute;
 	width: 700px;
 	height: auto;
-	// object-fit: cover;
+	object-fit: cover;
 	z-index: 2;
 	transition: all .2s ease-in-out;
 }
