--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -220,7 +220,7 @@ $width: 768px;
 				bottom: 55px;
 				width: 300px;
 				height: 200px;
-				object-fit: cover;
+				// object-fit: cover;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
 				z-index: 2;
