--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -55,7 +55,8 @@ $width: 768px;
 			.photograph {
 				position: relative;
 				margin: 0 auto;
-				background-size: 100% auto;
+				background-position: center;
+				background-size: cover;
 				background-repeat: no-repeat;
 				width: 100%;
 			}
@@ -221,7 +222,8 @@ $width: 768px;
 				width: 300px;
 				height: 200px;
 				// object-fit: cover;
-				background-size: 100% auto;
+				background-position: center;
+				background-size: cover;
 				background-repeat: no-repeat;
 				z-index: 2;
 				transition: all .2s ease-in-out;
