--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -33,8 +33,10 @@
       position: absolute;
       margin-top: 210px;
       display: flex;
-      width: 100%; }
+      width: 100%;
+      height: 250px; }
       .item .photograph-wrapper .photograph {
+        height: 250px;
         position: relative;
         margin: 0 auto;
         background-position: center;
