--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -51,8 +51,10 @@ $width: 768px;
 			margin-top: 210px;
 			display: flex;
 			width: 100%;
+			height: 250px;
 
 			.photograph {
+				height: 250px;
 				position: relative;
 				margin: 0 auto;
 				background-position: center;
