a few scroll snapping fixes

--- a/css/grid.css
+++ b/css/grid.css
@@ -20,7 +20,6 @@ img {
 
 .grid-breadcrumb {
   display: inline-block;
-  float: left;
   padding: 10px 0px;
   text-decoration: underline;
   text-transform: capitalize; }
@@ -38,20 +37,15 @@ img {
   position: relative;
   overflow: hidden;
   width: 1000px;
-  height: 500px;
-  padding: 50px; }
-  .person .journal-wrapper .journal {
-    height: 500px;
-    width: auto; }
-
-tr:nth-child(odd) .journal {
-  left: -38px; }
+  height: 620px;
+  padding: 0px; }
 
 tr:nth-child(even) .journal {
   left: 362px; }
 
 .journal-wrapper {
-  position: relative; }
+  position: relative;
+  pointer-events: none; }
 
 .journal {
   display: flex;
@@ -73,9 +67,9 @@ tr:nth-child(even) .journal {
   position: absolute;
   width: 700px;
   height: auto;
-  object-fit: cover;
   z-index: 2;
-  transition: all .2s ease-in-out; }
+  transition: all .2s ease-in-out;
+  margin-top: 55px; }
 
 .tag {
   position: -webkit-sticky;
@@ -97,7 +91,7 @@ tr:nth-child(even) .journal {
     transform: rotate(10deg); }
 
 tr {
-  scroll-snap-type: y mandatory; }
+  scroll-snap-type: x mandatory; }
 
 .subtag {
   width: 164px;
