--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -27,7 +27,6 @@ img {
 
 .grid-breadcrumb {
 	display: inline-block;
-	float: left;
 	padding: 10px 0px;
 	text-decoration: underline;
 	text-transform: capitalize;
@@ -53,24 +52,15 @@ img {
 	position: relative;
 	overflow: hidden;
 	width: 1000px;
-	height: 500px;
-	padding: 50px;
-
-	.journal-wrapper {
-
-		// height: 100%;
-		.journal {
-			height: 500px;
-			width: auto;
-		}
-	}
+	height: 620px;
+	padding: 0px;
 }
 
 
 
 tr:nth-child(odd) {
 	.journal {
-		left: -38px;
+		//left: -38px;
 	}
 }
 
@@ -82,6 +72,7 @@ tr:nth-child(even) {
 
 .journal-wrapper {
 	position: relative;
+	pointer-events: none;
 }
 
 .journal {
@@ -89,7 +80,6 @@ tr:nth-child(even) {
 	position: absolute;
 	width: 440px;
 	height: 620px;
-
 }
 
 .photograph-wrapper {
@@ -109,9 +99,10 @@ tr:nth-child(even) {
 	position: absolute;
 	width: 700px;
 	height: auto;
-	object-fit: cover;
 	z-index: 2;
 	transition: all .2s ease-in-out;
+	margin-top: 55px;
+
 }
 
 .tag {
@@ -137,7 +128,7 @@ tr:nth-child(even) {
 }
 
 tr {
-	scroll-snap-type: y mandatory;
+	scroll-snap-type: x mandatory;
 }
 
 .subtag {
