--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -34,15 +34,14 @@
       margin-top: 210px;
       display: flex;
       width: 100%;
-      height: 250px; }
+      max-height: 250px; }
       .item .photograph-wrapper .photograph {
-        height: 250px;
         position: relative;
         margin: 0 auto;
-        background-position: center;
-        background-size: cover;
+        background-size: 100% auto;
         background-repeat: no-repeat;
-        width: 100%; }
+        width: 100%;
+        max-height: 250px; }
     .item .tag {
       cursor: pointer;
       z-index: 2;
@@ -154,8 +153,7 @@
         bottom: 55px;
         width: 300px;
         height: 200px;
-        background-position: center;
-        background-size: cover;
+        background-size: 100% auto;
         background-repeat: no-repeat;
         z-index: 2;
         transition: all .2s ease-in-out; }
