--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -51,16 +51,15 @@ $width: 768px;
 			margin-top: 210px;
 			display: flex;
 			width: 100%;
-			height: 250px;
+			max-height: 250px;
 
 			.photograph {
-				height: 250px;
 				position: relative;
 				margin: 0 auto;
-				background-position: center;
-				background-size: cover;
+				background-size: 100% auto;
 				background-repeat: no-repeat;
 				width: 100%;
+				max-height: 250px;
 			}
 		}
 
@@ -224,8 +223,7 @@ $width: 768px;
 				width: 300px;
 				height: 200px;
 				// object-fit: cover;
-				background-position: center;
-				background-size: cover;
+				background-size: 100% auto;
 				background-repeat: no-repeat;
 				z-index: 2;
 				transition: all .2s ease-in-out;
