edited insight imagepositioning for mob

--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -50,15 +50,15 @@ $width: 768px;
 			position: absolute;
 			margin-top: 210px;
 			display: flex;
-			width: 100%;
+			// width: 100%;
 			max-height: 250px;
 
 			.photograph {
 				position: relative;
 				margin: 0 auto;
-				background-size: 100% auto;
-				background-repeat: no-repeat;
-				width: 100%;
+				// background-size: 100% auto;
+				// background-repeat: no-repeat;
+				// width: 100%;
 				max-height: 250px;
 			}
 		}
