--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -39,7 +39,7 @@ $width: 768px;
 				margin: 0 auto;
 				max-width: 380px;
 				max-height: 600px;
-				object-fit: cover;
+				// object-fit: cover;
 				margin-bottom: 100px;
 				top: 40px;
 			}
@@ -72,9 +72,9 @@ $width: 768px;
 			position: absolute;
 			width: 100px;
 			height: 100px;
-			background-size: 100% auto;
-			background-repeat: no-repeat;
-			object-fit: cover;
+			// background-size: 100% auto;
+			// background-repeat: no-repeat;
+			// object-fit: cover;
 			-webkit-transition: -webkit-transform .8s ease-in-out;
 			transition: transform .3s ease-in-out;
 
@@ -184,9 +184,9 @@ $width: 768px;
 				display: flex;
 				position: absolute;
 				width: 270PX;
-				background-size: 100% auto;
-				background-repeat: no-repeat;
-				object-fit: cover;
+				// background-size: 100% auto;
+				// background-repeat: no-repeat;
+				// object-fit: cover;
 				top: 40px;
 			}
 		}
@@ -201,9 +201,9 @@ $width: 768px;
 			position: absolute;
 			width: 100px;
 			height: 100px;
-			background-size: 100% auto;
-			background-repeat: no-repeat;
-			object-fit: cover;
+			// background-size: 100% auto;
+			// background-repeat: no-repeat;
+			// object-fit: cover;
 			-webkit-transition: -webkit-transform .8s ease-in-out;
 			transition: transform .3s ease-in-out;
 
@@ -223,8 +223,8 @@ $width: 768px;
 				width: 300px;
 				height: 200px;
 				// object-fit: cover;
-				background-size: 100% auto;
-				background-repeat: no-repeat;
+				// background-size: 100% auto;
+				// background-repeat: no-repeat;
 				z-index: 2;
 				transition: all .2s ease-in-out;
 
@@ -254,9 +254,9 @@ $width: 768px;
 		right: 50px;
 		height: 100px;
 		width: 100px;
-		background-size: 100% auto;
-		background-repeat: no-repeat;
-		object-fit: cover;
+		// background-size: 100% auto;
+		// background-repeat: no-repeat;
+		// object-fit: cover;
 		-webkit-transition: -webkit-transform .8s ease-in-out;
 		transition: transform .3s ease-in-out;
 
@@ -272,9 +272,9 @@ $width: 768px;
 		right: 50px;
 		height: 60px;
 		width: 60px;
-		background-size: 100% auto;
-		background-repeat: no-repeat;
-		object-fit: cover;
+		// background-size: 100% auto;
+		// background-repeat: no-repeat;
+		// object-fit: cover;
 		-webkit-transition: -webkit-transform .8s ease-in-out;
 		transition: transform .3s ease-in-out;
 
@@ -311,9 +311,9 @@ $width: 768px;
 	position: absolute;
 	width: 60px;
 	height: 60px;
-	background-size: 100% auto;
-	background-repeat: no-repeat;
-	object-fit: cover;
+	// background-size: 100% auto;
+	// background-repeat: no-repeat;
+	// object-fit: cover;
 	-webkit-transition: -webkit-transform .8s ease-in-out;
 	transition: transform .3s ease-in-out;
 
