--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -33,11 +33,16 @@
       position: absolute;
       margin-top: 210px;
       display: flex;
-      max-height: 250px; }
+      width: 100%;
+      height: 250px; }
       .item .photograph-wrapper .photograph {
+        height: 250px;
         position: relative;
         margin: 0 auto;
-        max-height: 250px; }
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%; }
     .item .tag {
       cursor: pointer;
       z-index: 2;
@@ -149,7 +154,8 @@
         bottom: 55px;
         width: 300px;
         height: 200px;
-        background-size: 100% auto;
+        background-position: center;
+        background-size: cover;
         background-repeat: no-repeat;
         z-index: 2;
         transition: all .2s ease-in-out; }
