--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -39,7 +39,7 @@ $width: 768px;
 				margin: 0 auto;
 				max-width: 380px;
 				max-height: 600px;
-				// object-fit: cover;
+				object-fit: cover;
 				margin-bottom: 100px;
 				top: 40px;
 			}
@@ -50,16 +50,17 @@ $width: 768px;
 			position: absolute;
 			margin-top: 210px;
 			display: flex;
-			// width: 100%;
-			max-height: 250px;
+			width: 100%;
+			height: 250px;
 
 			.photograph {
+				height: 250px;
 				position: relative;
 				margin: 0 auto;
-				// background-size: 100% auto;
-				// background-repeat: no-repeat;
-				// width: 100%;
-				max-height: 250px;
+				background-position: center;
+				background-size: cover;
+				background-repeat: no-repeat;
+				width: 100%;
 			}
 		}
 
@@ -72,9 +73,9 @@ $width: 768px;
 			position: absolute;
 			width: 100px;
 			height: 100px;
-			// background-size: 100% auto;
-			// background-repeat: no-repeat;
-			// object-fit: cover;
+			background-size: 100% auto;
+			background-repeat: no-repeat;
+			object-fit: cover;
 			-webkit-transition: -webkit-transform .8s ease-in-out;
 			transition: transform .3s ease-in-out;
 
@@ -184,9 +185,9 @@ $width: 768px;
 				display: flex;
 				position: absolute;
 				width: 270PX;
-				// background-size: 100% auto;
-				// background-repeat: no-repeat;
-				// object-fit: cover;
+				background-size: 100% auto;
+				background-repeat: no-repeat;
+				object-fit: cover;
 				top: 40px;
 			}
 		}
@@ -201,9 +202,9 @@ $width: 768px;
 			position: absolute;
 			width: 100px;
 			height: 100px;
-			// background-size: 100% auto;
-			// background-repeat: no-repeat;
-			// object-fit: cover;
+			background-size: 100% auto;
+			background-repeat: no-repeat;
+			object-fit: cover;
 			-webkit-transition: -webkit-transform .8s ease-in-out;
 			transition: transform .3s ease-in-out;
 
@@ -223,8 +224,9 @@ $width: 768px;
 				width: 300px;
 				height: 200px;
 				// object-fit: cover;
-				// background-size: 100% auto;
-				// background-repeat: no-repeat;
+				background-position: center;
+				background-size: cover;
+				background-repeat: no-repeat;
 				z-index: 2;
 				transition: all .2s ease-in-out;
 
@@ -254,9 +256,9 @@ $width: 768px;
 		right: 50px;
 		height: 100px;
 		width: 100px;
-		// background-size: 100% auto;
-		// background-repeat: no-repeat;
-		// object-fit: cover;
+		background-size: 100% auto;
+		background-repeat: no-repeat;
+		object-fit: cover;
 		-webkit-transition: -webkit-transform .8s ease-in-out;
 		transition: transform .3s ease-in-out;
 
@@ -272,9 +274,9 @@ $width: 768px;
 		right: 50px;
 		height: 60px;
 		width: 60px;
-		// background-size: 100% auto;
-		// background-repeat: no-repeat;
-		// object-fit: cover;
+		background-size: 100% auto;
+		background-repeat: no-repeat;
+		object-fit: cover;
 		-webkit-transition: -webkit-transform .8s ease-in-out;
 		transition: transform .3s ease-in-out;
 
@@ -311,9 +313,9 @@ $width: 768px;
 	position: absolute;
 	width: 60px;
 	height: 60px;
-	// background-size: 100% auto;
-	// background-repeat: no-repeat;
-	// object-fit: cover;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	object-fit: cover;
 	-webkit-transition: -webkit-transform .8s ease-in-out;
 	transition: transform .3s ease-in-out;
 
