--- a/scss/rules.scss
+++ b/scss/rules.scss
@@ -43,6 +43,9 @@ body {
 				margin-left: -16px;
 
 				.nav-item {
+					@media only screen and (max-width: 768px) {
+						font-size: 25px;
+					}
 					.arrow {
 						display: inline-block;
 					}
