fixed rules font size on mob

--- a/scss/rules.scss
+++ b/scss/rules.scss
@@ -44,7 +44,7 @@ body {
 
 				.nav-item {
 					@media only screen and (max-width: 768px) {
-						font-size: 25px;
+						font-size: 0.7em;
 					}
 					.arrow {
 						display: inline-block;
