--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -10,6 +10,7 @@
   .item {
     height: 250px;
     position: relative;
+    padding-bottom: 20px;
     margin-bottom: 310px; }
     .item .person {
       display: flex;
