--- a/css/insightsSliderMobile.css
+++ b/css/insightsSliderMobile.css
@@ -1,6 +1,8 @@
 @media only screen and (max-width: 768px) {
   #rotateBtn {
-    top: 103px; }
+    top: 103px;
+    bottom: unset;
+    position: absolute; }
   .insights-content {
     width: 100%;
     display: none; }
