--- a/css/insights.css
+++ b/css/insights.css
@@ -2,7 +2,6 @@ body {
   background-color: black;
   color: white;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 300;
   display: grid;
   place-items: center;
   max-width: 100%;
@@ -13,15 +12,11 @@ body {
     @media only screen and (max-width: 768px) {
       body .container {
         margin-top: 10%; } }
-
-
-  body .container h3 {
+  body h3 {
     color: #FFF;
     font-family: Helvetica;
-    font-weight: 300;
     font-size: 20px;
     line-height: 32px; }
-
   body .text {
     margin: 200px auto 0px;
     max-width: 530px; }
