--- a/css/rules.css
+++ b/css/rules.css
@@ -14,7 +14,8 @@ body {
       color: #FFF;
       font-family: Helvetica;
       font-size: 20px;
-      line-height: 40px; }
+      line-height: 40px; 
+      font-weight: 300px;}
     body .container .text {
       margin: 200px auto 0px;
       max-width: 530px; }
