--- a/css/rules.css
+++ b/css/rules.css
@@ -15,7 +15,7 @@ body {
       font-family: Helvetica;
       font-size: 20px;
       line-height: 40px; 
-      font-weight: 300px;}
+      font-weight: 300;}
     body .container .text {
       margin: 200px auto 0px;
       max-width: 530px; }
