--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -1,291 +1,296 @@
 body {
-	background-color: black;
-	overflow-x: hidden; //can always remove this if decide want horizontal scrolling not just click
+    background-color: black;
+    overflow-x: hidden; //can always remove this if decide want horizontal scrolling not just click
 }
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 img {
-	height: 100%;
+    height: 100%;
 }
 
 .navbar {
-	z-index: 15;
+    z-index: 15;
 }
 
 .insights.active {
-	float: left;
-	text-decoration: none !important;
+    float: left;
+    text-decoration: none !important;
 }
 
 .nav-item {
-	width: max-content;
+    width: max-content;
 
 }
 
 .grid-breadcrumb {
-	display: inline-block;
-	padding: 10px 0px;
-	text-decoration: underline;
-	text-transform: capitalize;
+    display: inline-block;
+    padding: 10px 0px;
+    text-decoration: underline;
+    text-transform: capitalize;
 
-	.arrow {
-		display: inline-block !important;
-	}
+    .arrow {
+        display: inline-block !important;
+    }
 
 }
 
 .grid {
-	//use scroll snapping?
-	margin: 100px;
-	margin-left: 400px;
-	display: table;
+    //use scroll snapping?
+    margin: 100px;
+    margin-left: 400px;
+    display: table;
 
-	table {
-		margin-top: -130px;
-	}
+    table {
+        margin-top: -130px;
+    }
 }
 
 .person {
-	position: relative;
-	overflow: hidden;
-	width: 1000px;
-	height: 620px;
-	padding: 0px;
+    position: relative;
+    overflow: hidden;
+    width: 1000px;
+    height: 620px;
+    padding: 0px;
 }
 
 
 
 tr:nth-child(odd) {
-	.photograph {
-		left: 100px;
-	}
+    .photograph {
+        left: 100px;
+    }
 }
 
 tr:nth-child(even) {
-	.journal {
-		left: 362px;
-	}
+    .journal {
+        left: 362px;
+    }
 }
 
 .journal-wrapper {
-	position: relative;
-	pointer-events: none;
+    position: relative;
+    pointer-events: none;
 }
 
 .journal {
-	display: flex;
-	position: absolute;
-	width: 440px;
-	height: 620px;
+    display: flex;
+    position: absolute;
+    width: 440px;
+    height: 620px;
 }
 
 .photograph-wrapper {
-	position: relative;
+    position: relative;
 }
 
 .person div {
-	z-index: 1;
+    z-index: 1;
 }
 
 .person .current {
-	z-index: 3;
+    z-index: 3;
 }
 
 .photograph {
-	display: flex;
-	position: absolute;
-	width: 700px;
-	height: auto;
-	z-index: 2;
-	transition: all .2s ease-in-out;
-	margin-top: 55px;
+    display: flex;
+    position: absolute;
+    width: 700px;
+    height: auto;
+    z-index: 2;
+    transition: all .2s ease-in-out;
+    margin-top: 55px;
 
 }
 
 .tag {
-	position: -webkit-sticky;
-	position: sticky;
-	z-index: 5;
-	cursor: pointer;
-	margin-right: 73px;
-	top: 98px;
-	float: right;
-	display: flex;
-	width: 180px;
-	height: 180px;
-	background-size: 100% auto;
-	background-repeat: no-repeat;
-	object-fit: cover;
-	-webkit-transition: -webkit-transform .8s ease-in-out;
-	transition: transform .3s ease-in-out;
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 5;
+    cursor: pointer;
+    margin-right: 73px;
+    top: 98px;
+    float: right;
+    display: flex;
+    width: 180px;
+    height: 180px;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    object-fit: cover;
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition: transform .3s ease-in-out;
 
-	&:hover {
-		transform: rotate(10deg);
-	}
+    &:hover {
+        transform: rotate(10deg);
+    }
 }
 
 tr {
-	scroll-snap-type: x mandatory;
+    scroll-snap-type: x mandatory;
 }
 
 .subtag {
-	width: 164px;
-	height: 170px;
-	margin-right: -235px;
-	z-index: 4;
-	top: 10px;
+    width: 164px;
+    height: 170px;
+    margin-right: -235px;
+    z-index: 4;
+    top: 10px;
 }
 
 [data-designer="ux-designer"] {
-	.maintag {
-		background-image: url('../assets/UX.png');
+    .maintag {
+        background-image: url('../assets/UX.png');
 
-	}
+    }
 }
 
 [data-designer="service-designer"] {
-	.maintag {
-		background-image: url('../assets/SERV.png');
+    .maintag {
+        background-image: url('../assets/SERV.png');
+    }
+}
 
-	}
+[data-designer="service-designer"] {
+    .maintag {
+        background-image: url("../assets/VR.png");
+    }
 }
 
 [data-designer="videographer"] {
-	.maintag {
-		background-image: url('../assets/VID.png');
-	}
+    .maintag {
+        background-image: url('../assets/VID.png');
+    }
 }
 
 //**subtags**
 [data-designerWork="in-house"] {
-	.subtag {
-		background-image: url('../assets/inhouse.png');
-	}
+    .subtag {
+        background-image: url('../assets/inhouse.png');
+    }
 }
 
 [data-designerWork="agency"] {
-	.subtag {
-		background-image: url('../assets/agency.png');
-	}
+    .subtag {
+        background-image: url('../assets/agency.png');
+    }
 }
 
 [data-designerWork="freelance"] {
-	.subtag {
-		background-image: url('../assets/freelance.png');
-	}
+    .subtag {
+        background-image: url('../assets/freelance.png');
+    }
 }
 
 .left-shadow {
-	height: 100vh;
-	width: 20%;
-	background: rgb(0, 0, 0);
-	background: -webkit-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
-	background: -o-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
-	background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	z-index: 10;
-	pointer-events: none;
+    height: 100vh;
+    width: 20%;
+    background: rgb(0, 0, 0);
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
+    background: -o-linear-gradient(left, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0) 100%);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 10;
+    pointer-events: none;
 }
 
 .right-shadow {
-	height: 100vh;
-	width: 20%;
-	background: rgb(255, 255, 255);
-	background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
-	background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
-	background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
-	position: fixed;
-	top: 0px;
-	right: 0px;
-	z-index: 10;
-	pointer-events: none;
+    height: 100vh;
+    width: 20%;
+    background: rgb(255, 255, 255);
+    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
+    background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 100%);
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    z-index: 10;
+    pointer-events: none;
 }
 
 .column-wrapper {
-	position: relative;
-	// background-color: yellow;
+    position: relative;
+    // background-color: yellow;
 
 }
 
 #rotateBtn {
-	position: fixed;
-	z-index: 15;
-	bottom: 30px;
-	right: 30px;
-	text-align: right;
-	color: inherit;
-	border: none;
-	padding: 0;
-	outline: inherit;
-	font-size: 30px;
-	background: url("../assets/icons/rotate.png") no-repeat no-repeat center;
-	width: 33px;
-	height: 34px;
+    position: fixed;
+    z-index: 15;
+    bottom: 30px;
+    right: 30px;
+    text-align: right;
+    color: inherit;
+    border: none;
+    padding: 0;
+    outline: inherit;
+    font-size: 30px;
+    background: url("../assets/icons/rotate.png") no-repeat no-repeat center;
+    width: 33px;
+    height: 34px;
 
 }
 
 .share-link {
-	right: 100px;
-	position: relative;
-	width: 80px;
-	display: flex;
-	float: right;
-	top: 227px;
-	cursor: pointer;
-	color: white;
-	font-size: 14px;
-	font-weight: 300;
-	line-height: 14px;
+    right: 100px;
+    position: relative;
+    width: 80px;
+    display: flex;
+    float: right;
+    top: 227px;
+    cursor: pointer;
+    color: white;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 14px;
 
-	&:hover {
-		text-decoration: underline;
-	}
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .share-arrow {
-	height: 13.5px;
-	width: 14px;
-	display: inline-block;
-	margin-left: 7px;
-	margin-top: -2px;
+    height: 13.5px;
+    width: 14px;
+    display: inline-block;
+    margin-left: 7px;
+    margin-top: -2px;
 }
 
 .share-box {
-	display: none;
-	height: 89px;
-	width: 129px;
-	background-color: white;
-	color: black;
-	padding: 10px;
-	right: -28px;
-	position: relative;
-	float: right;
-	top: 262px;
+    display: none;
+    height: 89px;
+    width: 129px;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    right: -28px;
+    position: relative;
+    float: right;
+    top: 262px;
 
-	p {
-		font-size: 8px;
-		margin: 0 0 5px;
-	}
+    p {
+        font-size: 8px;
+        margin: 0 0 5px;
+    }
 
-	ul {
-		list-style-type: none;
-		padding: 0;
-		line-height: 1.5;
+    ul {
+        list-style-type: none;
+        padding: 0;
+        line-height: 1.5;
 
-		li {
-			font-size: 12px;
-			line-height: 18px;
-			cursor: pointer;
-		}
-	}
+        li {
+            font-size: 12px;
+            line-height: 18px;
+            cursor: pointer;
+        }
+    }
 
-	li:hover {
-		text-decoration: underline;
-	}
+    li:hover {
+        text-decoration: underline;
+    }
 
 }
