dont hide person 9 error

--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -222,6 +222,10 @@ $width: 768px;
     background-image: url('../assets/UX.png');
 }
 
+.sticky-note.graphic-designer {
+    background-image: url('../assets/GRAPHIC.png');
+}
+
 .sticky-note.service-designer {
     background-image: url('../assets/SERV.png');
 }
